--- a/ueventd.sun7i.rc
+++ b/ueventd.sun7i.rc
@@ -4,8 +4,8 @@
 /dev/ump                    0660    system      graphics
 /dev/mali                   0660    system      graphics
 /dev/video*                 0660    system      system
-/dev/snd/pcmC0D0c           0660    system      media
-/dev/snd/pcmC0D0p           0660    system      media
+/dev/snd/pcmC0D0c           0660    media       media
+/dev/snd/pcmC0D0p           0660    media       media
 /dev/ttyUSB0                0660    system      system
 /dev/ttyUSB1                0660    system      system
 /dev/ttyUSB2                0660    system      system
