wing-clover: Use Android init.rc
For sunxi's changes, must go to init.sun7i.rc

Change-Id: I99d29d9743f67b6fe4574de74a3dd3bc44ac5398

--- a/init.sun7i.rc
+++ b/init.sun7i.rc
@@ -16,6 +16,12 @@ on early-init
     mount debugfs debugfs /sys/kernel/debug
     mkdir /databk 0700 root  system
 
+on init
+    insmod /nand.ko
+
+# create partition symlinks
+    symlink /dev/block/nandd /dev/block/system
+
 on early-fs
     mount ext4 /dev/block/system /system ro wait noatime nodev barrier=0
     insmod  /system/vendor/modules/disp.ko
