wing-clover: Bringup ethernet
Add ethernet type & attributes in overlay settings in config.xml
to enable ethenert in ConnectivityService.

Also add dhcpd_eth0 & iprenew_eth0 service to dynamically reqeust
IP address with dhcp protocol.

However to support static IPs, need to provide extra ethernet
service & settings for configuration.

Change-Id: Id8ea7538f8f05f07a01b0a1304953dfff5059636

--- a/init.sun7i.rc
+++ b/init.sun7i.rc
@@ -177,3 +177,13 @@ service setupfs /system/bin/setupfs
     group root
     class early
     oneshot
+
+service dhcpcd_eth0 /system/bin/dhcpcd -ABKL
+    class main
+    disabled
+    oneshot
+
+service iprenew_eth0 /system/bin/dhcpcd -n
+    class main
+    disabled
+    oneshot
