wing-clover: Add support to boot in Android L
Android L has various changes in init.rc, vold, and luncher:

1. need to use builtin mount_all command in init to mount
   the file system and trigger events to start main and late_start
   services
2. change volume naming rules required by vold
3. add appwidget permissions to avoid lunch2 from crashing

Change-Id: Ibe1a41d00081fc9eb15c0f6c4d4c254ad2baa28e

--- a/init.sun7i.rc
+++ b/init.sun7i.rc
@@ -41,15 +41,7 @@ on early-fs
     class_start early
 
 on fs
-    wait /dev/block/data
-    mount ext4 /dev/block/data /data wait noatime nosuid nodev barrier=0
-    wait /dev/block/cache
-    mount ext4 /dev/block/cache /cache wait noatime nosuid nodev barrier=0
-    #format_userdata /dev/block/UDISK WING
-    wait /dev/block/databk
-    mount ext4 /dev/block/databk /databk wait noatime nosuid nodev barrier=0
-    umount /databk
-    rmdir /databk
+    mount_all /fstab.sun7i
 
 on boot
 # use automatic detecttion insmod ctp & gsensor driver
